# nanoserve

./: Cargo.toml  README.md
src/: main.rs
src/download/: mod.rs
src/resources/: common.js  download.html  download.js  style.css  upload.html  upload.js
src/upload/: mod.rs
