[package]
name = "nanoserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitise-file-name = "1.0.0"
clean-path = "0.2.1"
dashmap = "6.0.1"
lazy_static = "1.5.0"
getrandom = "0.2.15"
clap = { version = "4.5.13", features = ["derive"] }
urlencoding = "2.1.3"
colored = "2.1.0"

[profile.release]
lto = true
strip = true